<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="336dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@android:color/white"
        app:cardElevation="0dp"
        android:focusable="true"
        android:checkable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700">


            <Button
                android:id="@+id/buttonMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/orange"
                android:text="@string/details"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameMovie"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/my_name"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actorsMovie"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="28dp"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/released"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/longMovie"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/rating"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.card.MaterialCardView>



    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">


        <EditText
            android:id="@+id/yourHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:hint="Movie Length" />

        <EditText
            android:id="@+id/yourHobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobby"
            android:hint="Movie Name" />

        <EditText
            android:id="@+id/yourWeight"
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Movie Actors" />










    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>

